--- a/src/templates/post/style.scss
+++ b/src/templates/post/style.scss
@@ -20,7 +20,7 @@
 
     time {
       font-size: 0.75rem;
-      color: c.$gray-600;
+      color: c.$gray-700;
       display: inline;
       margin-right: 10px;
     }
